# CSCI3100_Software_Eng

./: .gitignore  README.md  notes.aux  notes.fdb_latexmk  notes.fls  notes.out  notes.tex  notes.toc  project(1).ipynb
app/backend/: .gitignore  Cargo.toml  Dockerfile  README.md  build-lambda.sh  build.sh  template.yaml
app/backend/nodejs-lambda/: .gitignore  README.md  build-and-deploy.sh  frontend-upload-example.js  local-secrets.template.json  package-lock.json  package.json  packaged.yaml  template.yaml  test-db.js
app/backend/nodejs-lambda/src/: API_DOCUMENTATION.md  FRONTEND_AUTH_SETUP.md  index.js  local-server.js
app/backend/nodejs-lambda/src/middleware/: auth.js
app/backend/nodejs-lambda/src/models/: Course.js  User.js
app/backend/nodejs-lambda/src/scripts/: create-tables.js  seed-db.js
app/backend/nodejs-lambda/src/utils/: db.js  response.js
app/backend/src/: main.rs
app/backend/src/common/: auth.rs  config.rs  db.rs  error.rs  logger.rs  mod.rs
app/backend/src/db/: dbinit.surql  test.js
app/backend/src/lambda/: mod.rs
app/backend/src/lambda/auth/: login.rs  mod.rs  register.rs  verify.rs
app/backend/src/lambda/code_execution/: evaluate.rs  execute.rs  mod.rs  submission.rs
app/backend/src/lambda/course/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
app/backend/src/lambda/forum/: mod.rs
app/backend/src/lambda/quiz/: mod.rs
app/backend/src/lambda/user/: mod.rs
app/backend/src/models/: course.rs  forum.rs  mod.rs  quiz.rs  submission.rs  user.rs
app/backend/src/models/user/: index.js
docs/: .gitignore
(+153 files in other folders)
