[package]
name = "kaiju-academy-backend"
version = "0.1.0"
edition = "2024"
authors = ["Kaiju Academy Team"]
description = "AWS Lambda functions for Kaiju Academy code learning platform"

[dependencies]
# AWS Lambda Runtime
lambda_runtime = "0.13.0"
aws_lambda_events = "0.16.0"
aws-config = "1.5.18"
aws-sdk-dynamodb = "1.67.0"
aws-sdk-s3 = "1.78.0"
aws-sdk-sqs = "1.61.0"
aws-sdk-cognitoidentityprovider = "1.72.0"
http = "1.1.0"

# Async Runtime
tokio = { version = "1.28.2", features = ["full"] }

# SurrealDB client
surrealdb = "2.2.1"

# Serialization / Deserialization
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"

# Error handling
anyhow = "1.0.72"
thiserror = "2.0.12"

# Utilities
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
log = "0.4.19"
env_logger = "0.11.6"
async-trait = "0.1.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
once_cell = "1.18.0"

# HTTP Client
reqwest = { version = "0.12.12", features = ["json"] }

# Security
jsonwebtoken = "9.3.1"
argon2 = "0.5.1"
rand = "0.9.0"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
